# iai-personal-memory-engine

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  README_zh-CN.md  SECURITY.md  WINDOWS_PORT_HANDOFF.md  glama.json  pyproject.toml  setup.py
bench/: __init__.py  _night_runner.py  analyze_arousal_ab.py  analyze_efe_ab.py  arousal_budget_ab.py  capture_dedup_lock.py  community_pipeline_perf.py  consolidation_rss_peak.py  contradiction_longitudinal.py  contradiction_longitudinal_claude.py  embed_warm_cost.py  embedder_baseline.py  embedder_latency.py  embedder_recall_compare.py  longmemeval_blind.py  make_parity_summary.py  memory_footprint.py  memorygraph_adj_spike.py  memorygraph_csr_parity.py  memorygraph_memory.py  neural_map.py  personal_fact_drift.py  sleep_ablation.py  tokens.py  total_session_cost.py  trajectory.py  verbatim.py
docs/: DEPLOYMENT.md
mcp-wrapper/: package-lock.json  package.json  tsconfig.json
rust/: .gitignore  Cargo.toml  deny.toml
rust/.cargo/: nextest.toml
rust/iai_mcp_embed_core/: .gitignore  Cargo.toml
rust/iai_mcp_embed_core/src/: bert.rs  error.rs  lib.rs
rust/iai_mcp_embed_core/tests/: baseline_loader.rs  numeric_parity.rs  tokenizer_api_smoke.rs
rust/iai_mcp_graph_core/: Cargo.toml
rust/iai_mcp_graph_core/src/: centrality.rs  clustering.rs  connectivity.rs  error.rs  generators.rs  lib.rs  shortest.rs
rust/iai_mcp_native/: Cargo.toml  pyproject.toml
rust/iai_mcp_native/iai_mcp_native/: __init__.py
rust/iai_mcp_native/src/: lib.rs
scripts/: calibrate_cpm_floor.py  com.iai-mcp.daemon.plist.template  idle_cpu_regression_fence.sh  install.ps1  install.sh  migrate_lance_to_hippo.py  uninstall.ps1  uninstall.sh  update.sh
tests/: REMOVED.md  _perf_helpers.py  _recall_helpers.py  _socket_test_helpers.py  conftest.py  conftest_recall.py  test_aaak.py  test_active_forgetting.py  test_active_inference_gate.py  test_analyze_efe_ab.py  test_archive_stuck_backups.py  test_arousal_budget_ab.py  test_art_gate.py  test_audit_verdicts_landed.py  test_autist_knobs_live.py  test_bank_recall_cli.py  test_batch_api.py  test_batch_guard.py  test_bedtime.py  test_bench.py  test_bench_latency_regression.py  (+425 more)
(+279 files in other folders)
