[workspace]
members = ["iai_mcp_embed_core", "iai_mcp_graph_core", "iai_mcp_native"]
resolver = "2"

[workspace.package]
license    = "MIT"
repository = "https://github.com/CodeAbra/iai-personal-memory-engine"
edition    = "2021"

[workspace.dependencies]
candle-core    = "0.10.2"
candle-nn      = "0.10.2"
safetensors    = "0.7.0"
tokenizers     = "0.23.1"
hf-hub         = { version = "0.4.1", features = ["ureq"] }   # "sync" feature does not exist in 0.4.x; "ureq" is the blocking HTTP backend
pyo3           = "0.22"      # locked pair with numpy 0.22 + pyo3-stub-gen 0.6 — extension-module is opt-in per crate
numpy          = "0.22"      # graph_core zero-copy ndarray bridge; lockstep with pyo3 0.22
accelerate-src = "0.3.2"
pyo3-stub-gen  = "0.6"       # 0.22.x requires pyo3 >= 0.26 — must stay on 0.6 alongside pyo3 0.22
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "2"
