[package]
name    = "iai_mcp_graph_core"
version = "0.1.0"
edition = "2021"
license.workspace    = true
repository.workspace = true

[lib]
name       = "iai_mcp_graph_core"
crate-type = ["rlib"]    # only the native wrapper crate (iai_mcp_native) ships the cdylib

# Pure-Rust graph algorithms layer. No embedder dependencies — strict
# separation: this crate's dependency tree must NOT pull in the BERT
# forward-pass stack (Apple Accelerate BLAS, the tokenizer crate, or any
# ML tensor backend such as PyTorch / ONNX runtime). Policy is enforced
# declaratively by cargo-deny [bans] at the workspace root.

[dependencies]
pyo3           = { workspace = true }
pyo3-stub-gen  = { workspace = true }
petgraph       = { version = "0.6", features = ["rayon"] }
rustworkx-core = "0.17"
rayon          = "1.10"
fixedbitset    = "0.5"
rand           = { version = "0.9", default-features = false, features = ["std"] }
rand_pcg       = "0.9"
numpy          = { workspace = true }   # zero-copy ndarray bridge, pinned to pyo3 0.22
uuid           = "1.10"
serde          = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
proptest = "1.5"
approx   = "0.5"
